find_package(Doxygen)


if(DOXYGEN_FOUND)
	set(DOC_INSTALL_PATH "doc")
	if(UNIX)
		set(DOC_INSTALL_PATH "share/doc/${PROJECT_NAME}-${PROJECT_VERSION}")
	endif(UNIX)

	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
	add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
	install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION ${DOC_INSTALL_PATH} COMPONENT doc)
endif(DOXYGEN_FOUND)

